<resources>
    //The main
    <string name="app_name">Umbrella</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Username">Username</string>
    <string name="last_name">Last name</string>
    <string name="umbrella">Umbrella</string>
    <string name="temp">29°C</string>
    <string name="name">City</string>
    <string name="description">Clear sky</string>
    <string name="max_temp">5.6°C</string>
    <string name="min_temp">-5.4°C</string>
    <string name="wind">06:40 AM</string>
    <string name="pressure">06:40 AM</string>
    <string name="humidity">06:40 AM</string>


    //Important
    <string name="info_about_app">Наше приложение создано для облегчения людям задачи с выброром одежды на опреденную погоду. Введите в поисковик нужный вам город и получите всю информацию о погоде, а так же как под нее одеться.</string>
    <string name="AboutApp">О приложении</string>
    <string name="version_text">Версия программы: 1.0</string>
    <string name="developers">Разработчики: <b><i>«Flame technologies»</i></b></string>
    <string name="about_app">О приложении</string>
    <string name="appbar_scrolling_view_behavior" translatable="false">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>

    //Weather description
    //COLD
    <string name="zero_three">Сегодня хорошая погода, вам понадобится курта утеплённая, плотные джинсы(брюки) не забудьте шапку, будет так же хорошо, если наденете куртку типа бомбер. Хорошего дня.</string>
    <string name="minus_four_seven">Холодновато… а это значит сегодня надо одеться тепло, вам понадобится пальто/куртка с мехом, а под нее кофту, обязательно шарф, шапка, будет хорошо если и про термобелье не забудете.</string>
    <string name="minus_eight_eighteen">Это уже слишком.. наденьте пуховик, под него кофту/водолазку, шарф , шапка и даже перчатки, и под штанами обязательно термобелье. В такую погоду чем теплее тем лучше, берегите себя.</string>
    <string name="minus_nineteen_eighty">Сегодня погода очень холодная, оденьтесь максимально тепло, при такой температуры возможно обморожение, защитите свое тело от холода, носите одежду с плотным материалом.</string>
    //WORM
    <string name="plus_one_three">Куртка по типу джинсовки, под ним кофта крупной вязки, не надо накидывать на себя излешни много, оденьтесь по свободнее.</string>
    <string name="plus_four_five">При такой температуре надевайте демисезонную одежду, полупальто, куртки, парки, плащи. Что есть в наличии, то и надевайте.</string>
    <string name="plus_six_ten">Сегодня классная погода, обязательно погуляйте, лучше всего одеться так, чтобы не было холодно, но была возможность легко снять верхнюю одежду. Практичнее всего - джинсы, тонкий джемперок и ветровка.</string>
    <string name="plus_eleven_fifteen">Золотая середина, которая предполагает множество вариантов одежды – от курток до легких джемперов, от брюк до летних лосин. Дамы для вас будет оптимально платье с безрукавкой.</string>
    <string name="plus_sixteen_twentyOne">Подойдут любые летние вещи, но оденьте их так, что бы ваши руки и ноги были закрыты, тогда вы точно не замерзнете при такой погоде и вам не будет жарко, Подойдут джинсы, брюки, кофты из тонкой ткани с длинным рукавом, блузки с длинным рукавом, юбка миди, платья с длинным рукавом.</string>
    <string name="plus_twentyTwo_twentySeven">Сегодня можно одеть платье, шорты с футболкой, юбку короткую и блузку легкую. Для парней тоже самое, рубашки с коротким рукавом, лёгкие брюки, возьмите с собой так же кепку или шляпу от Солнца.</string>
    <string name="plus_twentyEight_thirtyFive">Сегодня очень жарко, по поводу одежды думаю понятно, Umbrella советуют вам по возможности меньше проводить время под солнцем и используйте солнцезащитный крем. Берегите себя.</string>
    <string name="plus_thirtySix_sixty">В столь жаркую погоду, меньше проводите время на улице, обязательно воспользуйтесь солнцезащитным кремом.</string>
    <string name="here_will_description">Тут будет описание</string>


</resources>